NEWS - OpenPrinting CUPS Filters v1.11.4 - 2016-09-21
-----------------------------------------------------

CHANGES IN V1.11.5

	- gstoraster, pdftoraster: Let filters generate PWG Raster if
          the environment variable FINAL_CONTENT_TYPE is set to
          image/pwg-raster, make sure full-page bitmaps are generated
          in PWG_raster mode, and added mime conversion rules for
          direct PWG Raster output.
	- cups-browsed: Corrected checking of the PDLs of an IPP network
	  printer. Now PCL 5c/e printers (not HP inkjets) should get
	  recognized correctly.
	- texttopdf: Added missing NULL check to avoid a segfault when
	  texttopdf does not find a suitable (monospace TTF) font.
	- foomatic-rip: Replace old manpage macro calls from
	  foomatic-filters 3.0.2-20050114.
	- cups-browsed: Allow changing BrowseInterval and
	  BrowseTimeout via cups-browsed.conf, as it was formerly with
	  CUPS (Debian bug #794655).
	- pdftopdf: Count the actual output pages also if the
	  number-up option is not used, to correctly find out whether
	  we have an even or odd number of pages, even if the
	  page-ranges option is used. This is needed to correctly
	  decide whether for duplex printing a blank page has to be
	  added (Bug #1377).

CHANGES IN V1.11.4

	- gstoraster: Allow Ghostscript to use the center-of-pixel
	  method instead of the PostScript-standard any-part-of-pixel
	  method when rendering filled paths. This improves the
	  graphics output quality of low-resolution printers like
	  label printers, for example to assure readability of bar
	  codes (Bug #1373).
	- cups-browsed: Fixes to avoid unneeded calls of
	  handle_cups_queues() and even infinite loops (Possible fix
	  for bug #1376). Also make sure that queues left over from
	  the previous cups-browsed session are integrated correctly.

CHANGES IN V1.11.3

	- cups-browsed: If a queue is not only discovered via Bonjour
	  but also via legacy CUPS or LDAP, prefer the Bonjour record